cmake_minimum_required(VERSION 3.15)
project(AinesmileEditor VERSION 1.0.0)

set(CMAKE_EXPORT_COMPILECOMMANDS ON)

if(NOT DEFINED CMAKE_OSX_ARCHITECTURES)
  set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
endif()

IF(CMAKE_BUILD_TYPE MATCHES Debug)
    set(BUILD_TYPE Debug)
    add_compile_definitions(LOGS_ENABLED)
ELSE(CMAKE_BUILD_TYPE MATCHES Debug)
    set(BUILD_TYPE Release)
ENDIF(CMAKE_BUILD_TYPE MATCHES Debug)

option(AVX2 "Target CPU does support AVX2")

if(NOT CMAKE_BUILD_TYPE MATCHES Debug)
    if(CMAKE_SYSTEM_PROCESSOR STREQUAL "AMD64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "amd64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
        if( ${CMAKE_CXX_COMPILER_ID} STREQUAL "IntelLLVM")
            add_compile_options("-O3")
            if(AVX2)
                add_compile_options("/QxCORE-AVX2" "-mavx2")
            endif()
        elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" OR "${CMAKE_CXX_SIMULATE_ID}" STREQUAL "MSVC")
            add_compile_options("/Ot" "/fp:fast" "/O2")
            if(AVX2)
                add_compile_options("/arch:AVX2")
            endif()
        else()
            add_compile_options("-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe")
            if(AVX2)
                add_compile_options("-mavx2")
            endif()
        endif()
    endif()
endif()

add_subdirectory(3rdparty)
add_subdirectory(src)
