cmake_minimum_required(VERSION 3.15)
project(AinesmileEditor VERSION 1.0.0)

set(CMAKE_EXPORT_COMPILECOMMANDS ON)

if(NOT DEFINED CMAKE_OSX_ARCHITECTURES)
  set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
endif()

IF(CMAKE_BUILD_TYPE MATCHES Debug)
    set(BUILD_TYPE Debug)
    add_compile_definitions(LOGS_ENABLED)
ELSE(CMAKE_BUILD_TYPE MATCHES Debug)
    set(BUILD_TYPE Release)
ENDIF(CMAKE_BUILD_TYPE MATCHES Debug)

option(AVX2 "Target CPU does support AVX2")

if(NOT CMAKE_BUILD_TYPE MATCHES Debug)
    if(CMAKE_SYSTEM_PROCESSOR STREQUAL "AMD64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "amd64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
        set(CURRENT_COMPILER_ID "${CMAKE_CXX_COMPILER_ID}")
        message("Compiler ID is: ${CURRENT_COMPILER_ID}")
        if(NOT "${CURRENT_COMPILER_ID}"  STREQUAL "MSVC")
            message("not MSVC")
            add_compile_options("-O3" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe")
        endif()
        if(AVX2)
            set(CURRENT_SIMULATE_ID "${CMAKE_CXX_SIMULATE_ID}")
            message("Simulate ID is: ${CURRENT_SIMULATE_ID}")
            if("${CURRENT_COMPILER_ID}" STREQUAL "IntelLLVM")
                message("Intel oneAPI enables AVX2")
                add_compile_options("/QxCORE-AVX2" "-mavx2")
            elseif ("${CURRENT_COMPILER_ID}" STREQUAL "MSVC" OR "${CURRENT_SIMULATE_ID}" STREQUAL "MSVC")
                message("MSVC or Clang-Cl enables AVX2")
                add_compile_options("/Ot" "/fp:fast" "/arch:AVX2")
            else()
                message("Others eg GCC/Clang... enables AVX2")
                add_compile_options("-mavx2")
            endif()
        endif()
    endif()
endif()

add_subdirectory(3rdparty)
add_subdirectory(src)
